[package]
name = "nautilus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3.2", features = ["v4", "serde"] }

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "guid"
path = "src/bin/guid.rs"

